src/objects/CB_User_Block__c.object
<CustomObject>
    <fields>
        <fullName>CB_Block__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field represents the block user has completed.</description>
        <inlineHelpText>This field represents the block user has completed.</inlineHelpText>
        <label>Block</label>
        <referenceTo>CB_Block__c</referenceTo>
        <relationshipName>User_Block_Completions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CB_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the user completed this block</description>
        <inlineHelpText>Has the user completed this block</inlineHelpText>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CB_Game_User__c</fullName>
        <label>Game User</label>
        <referenceTo>CB_Game_User__c</referenceTo>
        <relationshipLabel>User Block</relationshipLabel>
        <relationshipName>User_Block_Completions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>User Block</label>
    <nameField>
        <displayFormat>User Block -{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Block</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>